# Document-Clustering

./: .gitignore  LICENSE  conda_environnement_specs.yml.txt  globals.py  pyproject.toml  test.ipynb
core/datasets/: __init__.py  _base.py  _fetch_glove.py
core/datasets/data/: classic3.csv
core/plot/: __init__.py  points.py  visualiser.py
core/preprocessing/: __init__.py  text.py
core/utils/: __init__.py  _fiteval.py  _glove_file.py  _jar.py
core/word_embedding/: __init__.py  _vectoriser.py
dkm_work/: InterfaceDeepKmeans.py  compgraph.py  dkm.py  indications  utils.py
dkm_work/split/: linear_assignment_.py  split_test_train.py
dkm_work/split/bbc/: bbc_specs.py  test  validation
dkm_work/split/classic3/: classic3_specs.py  test  validation
dkm_work/split/classic4/: classic4_specs.py  test  validation
dsa/PyNotebooks/: dkm_bbc.ipynb  dkm_classic3.ipynb  dkm_classic4.ipynb  dsa_bbc.ipynb  dsa_classic4.ipynb  reduction.ipynb  tandem_bbc.ipynb  tandem_classic3.ipynb  tandem_classic4.ipynb
dsa/PyNotebooks/dkm_wo_vis/: dkm_classic3.ipynb
dsa/Rnotebooks/: TextTinyR_clustering.Rmd  classic3_reduced_kmeans.Rmd  dsa_bbc.Rmd  dsa_bbc_clustrd.Rmd  dsa_classic4_clustrd.Rmd  reduced_kmeans.R  reduced_kmeans.Rmd  test_doc2vec.Rmd
jalal_partie/: README.md  info  pyproject.toml
jalal_partie/PyNotebooks/: classic3.ipynb  dsa_classic.ipynb  reduction.ipynb
jalal_partie/src/: test.py
jalal_partie/src/core/: globals.py
jalal_partie/src/core/clustering/: CAH.py  KMeans.py  SphericalKmeans.py  WrapperModel.py  globals.py  test.ipynb
jalal_partie/src/core/embedding/: ModelForEmbedding.py  SentenceEmbedding.py
jalal_partie/src/core/embedding/deep_learning/: AE.py  InterfaceDeep.py
jalal_partie/src/core/processing/: Preprocessing.py  Processing.py
jalal_partie/src/core/reduction/: ReductionEmbedding.py
jalal_partie/src/tests/: test_models.py
scripts/: Preprocessor.py  bbc_specs.py  global_vars.py  preprocessing.py  utils.py
