[tool.poetry]
name = "text_clust"
version = "0.1.0"
description = ""
authors = ["godwin amegah <winneramegah492@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
ffmpeg = "^1.4"
graphviz = "^0.20.1"
ipython = "^8.13.2"
ipywidgets = "^8.0.6"
joblib = "^1.2.0"
jupyterlab = "^3.6.3"
matplotlib = "^3.7.1"
nbdime = "^3.2.1"
nltk = "^3.8.1"
numexpr = "^2.8.4"
numpy = ">=1.22,<1.24"
pandas = "^2.0.1"
pillow = "^9.5.0"
xgboost = "^1.7.5"
pydot = "^1.4.2"
requests = "^2.30.0"
scikit-learn = ">=0.23.0"
statsmodels = "^0.14.0"
tqdm = "^4.65.0"
umap-learn = "^0.5.3"
wheel = "^0.40.0"
widgetsnbextension = "^4.0.7"
keras-tuner = "^1.3.5"
tensorboard-plugin-profile = "^2.11.2"
tensorboard = ">=2.12,<2.13"
tensorflow-addons = "^0.20.0"
tensorflow-datasets = "^4.9.2"
tensorflow-hub = "^0.13.0"
transformers = "^4.28.1"
urlextract = "^1.8.0"
gym = "^0.26.2"
gensim = "^4.3.1"
datashader = "^0.14.4"
bokeh = ">=2.4.0,<2.5.0"
colorcet = "^3.0.1"
panel = "^0.14.4"
scikit-image = "^0.20.0"
holoviews = "^1.15.4"
cython = "^0.29.34"
scipy = "^1.10.1"
six = "^1.16.0"
hdbscan = "^0.8.29"
seaborn = "^0.12.2"
coclust = "^0.2.1"
spherecluster = "^0.1.7"
soyclustering = "^0.2.0"
scikit-learn-extra = "^0.3.0"
np = "^1.0.2"
tensorflow = "^2.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
